[gd_scene load_steps=12 format=3 uid="uid://csgkbpwfrrgjh"]

[ext_resource type="Texture2D" uid="uid://1mumgoo3msk8" path="res://assets/new_chat.svg" id="1_cgtub"]
[ext_resource type="Script" path="res://main.gd" id="1_to2d6"]
[ext_resource type="Texture2D" uid="uid://dbldyuuwcaser" path="res://assets/pexels-stywo-1261728.jpg" id="2_gi6n6"]
[ext_resource type="Texture2D" uid="uid://db52iapybajnd" path="res://assets/flags/usa.svg" id="3_ei05h"]
[ext_resource type="Texture2D" uid="uid://dse32b5spj1cr" path="res://assets/flags/russia.svg" id="4_0mtjn"]
[ext_resource type="PackedScene" uid="uid://ce1141et44dfv" path="res://scenes/examples_list.tscn" id="4_gn71v"]
[ext_resource type="PackedScene" uid="uid://dln8nn8a18jho" path="res://scenes/example.tscn" id="4_kpsvn"]
[ext_resource type="PackedScene" uid="uid://cpmguwaxnse6o" path="res://scenes/replace_menu.tscn" id="6_104nm"]

[sub_resource type="InputEventKey" id="InputEventKey_7xo67"]
device = -1
command_or_control_autoremap = true
shift_pressed = true
keycode = 65
unicode = 97

[sub_resource type="Shortcut" id="Shortcut_jbidm"]
events = [SubResource("InputEventKey_7xo67")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6aa38"]
bg_color = Color(0.129412, 0.129412, 0.129412, 0.705882)
corner_detail = 1

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_to2d6")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_gi6n6")
expand_mode = 1
stretch_mode = 6

[node name="ColorRect" type="ColorRect" parent="Background"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="MenuBar" type="MenuBar" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
flat = true

[node name="File" type="PopupMenu" parent="VBoxContainer/PanelContainer/HBoxContainer/MenuBar"]
item_count = 4
item_0/text = "New"
item_0/id = 0
item_1/text = "Open"
item_1/id = 1
item_2/text = "Save"
item_2/id = 2
item_3/text = "Save as..."
item_3/id = 3

[node name="Settings" type="PopupMenu" parent="VBoxContainer/PanelContainer/HBoxContainer/MenuBar"]
item_count = 1
item_0/text = "Fullscreen"
item_0/checkable = 1
item_0/id = 0

[node name="Language" type="PopupMenu" parent="VBoxContainer/PanelContainer/HBoxContainer/MenuBar/Settings"]
item_count = 2
item_0/text = "English"
item_0/icon = ExtResource("3_ei05h")
item_0/id = 0
item_1/text = "Русский"
item_1/icon = ExtResource("4_0mtjn")
item_1/id = 1
item_1/disabled = true

[node name="Theme" type="PopupMenu" parent="VBoxContainer/PanelContainer/HBoxContainer/MenuBar/Settings"]
item_count = 1
item_0/text = "Dark"
item_0/id = 0

[node name="Background" type="PopupMenu" parent="VBoxContainer/PanelContainer/HBoxContainer/MenuBar/Settings"]
item_count = 3
item_0/text = "From image"
item_0/id = 0
item_1/text = "From color"
item_1/id = 1
item_2/text = "Default"
item_2/id = 2

[node name="Tools" type="PopupMenu" parent="VBoxContainer/PanelContainer/HBoxContainer/MenuBar"]
item_count = 4
item_0/text = "Find"
item_0/id = 0
item_1/text = "Replace"
item_1/id = 1
item_2/text = "Remove duplicates"
item_2/id = 2
item_3/text = "Set system prompt"
item_3/id = 3

[node name="Help" type="PopupMenu" parent="VBoxContainer/PanelContainer/HBoxContainer/MenuBar"]
item_count = 3
item_0/text = "About (GitHub)"
item_0/id = 0
item_1/text = "Finetuning Docs"
item_1/id = 1
item_2/text = "Finetuning Page"
item_2/id = 2

[node name="FileName" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "untitled.jsonl"
horizontal_alignment = 2

[node name="HSplitContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="Left" type="PanelContainer" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/Left"]
layout_mode = 2

[node name="NewExample" type="Button" parent="VBoxContainer/HSplitContainer/Left/VBoxContainer"]
layout_mode = 2
shortcut = SubResource("Shortcut_jbidm")
text = "New example (Ctrl+Shift+A)"
icon = ExtResource("1_cgtub")
flat = true
icon_alignment = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/HSplitContainer/Left/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HSplitContainer/Left/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ExamplesList" parent="VBoxContainer/HSplitContainer/Left/VBoxContainer/ScrollContainer" instance=ExtResource("4_gn71v")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Center" type="PanelContainer" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_6aa38")

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HSplitContainer/Center"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="Example" parent="VBoxContainer/HSplitContainer/Center/ScrollContainer" instance=ExtResource("4_kpsvn")]
layout_mode = 2

[node name="RemoveExampleDialog" type="ConfirmationDialog" parent="."]
title = "Remove example?"
ok_button_text = "Remove"

[node name="ReplaceMenu" parent="." instance=ExtResource("6_104nm")]
visible = false
layout_mode = 1

[connection signal="id_pressed" from="VBoxContainer/PanelContainer/HBoxContainer/MenuBar/File" to="." method="_on_file_id_pressed"]
[connection signal="id_pressed" from="VBoxContainer/PanelContainer/HBoxContainer/MenuBar/Settings" to="." method="_on_settings_id_pressed"]
[connection signal="id_pressed" from="VBoxContainer/PanelContainer/HBoxContainer/MenuBar/Settings/Language" to="." method="_on_language_id_pressed"]
[connection signal="id_pressed" from="VBoxContainer/PanelContainer/HBoxContainer/MenuBar/Settings/Theme" to="." method="_on_theme_id_pressed"]
[connection signal="id_pressed" from="VBoxContainer/PanelContainer/HBoxContainer/MenuBar/Settings/Background" to="." method="_on_background_id_pressed"]
[connection signal="id_pressed" from="VBoxContainer/PanelContainer/HBoxContainer/MenuBar/Tools" to="." method="_on_tools_id_pressed"]
[connection signal="id_pressed" from="VBoxContainer/PanelContainer/HBoxContainer/MenuBar/Help" to="." method="_on_help_id_pressed"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/Left/VBoxContainer/NewExample" to="." method="_on_new_example_pressed"]
[connection signal="example_selected" from="VBoxContainer/HSplitContainer/Left/VBoxContainer/ScrollContainer/ExamplesList" to="." method="_on_examples_list_example_selected"]
[connection signal="replace" from="ReplaceMenu" to="." method="_on_replace_menu_replace"]
